--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,12 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-html{
-    font-size: 62.5%;
+*{box-sizing: border-box;margin: 0;padding: 0;}
+html{font-size: 62.5%;}
+
+body{font-family: 'Lexend Deca', sans-serif;@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 }
 
-body{
-    font-family: 'Lexend Deca', sans-serif;@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-}
 main{
     background:  hsl(233, 47%, 7%);
-    padding: 7%;
+    padding: 3%;
     padding-top: 25%;
     padding-bottom: 25%;
     display: flex;
@@ -20,7 +14,7 @@ main{
 }
 .sectionCard{
     background: hsl(244, 38%, 16%);
-    width: 95%;
+    width: 92%;
     border-radius: 10px;
 }
 .sectionCard img{
