--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 *{box-sizing: border-box;margin: 0;padding: 0;}
-html{font-size: 62.5%;}
+html{
+    font-size: 62.5%;
+    justify-content: center;
+    align-items: center;
+    background-image: url(./images/2880x1800_px_Dock_nature_peacefull_pier_sky_water_Wooden_Surface-1299721.jpg!d);
+}
+    
 
 body{font-family: 'Lexend Deca', sans-serif;@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 }
@@ -17,10 +23,17 @@ main{
     width: 92%;
     border-radius: 10px;
 }
-.sectionCard img{
+.img{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background: hsl(277deg 88% 69%);
+    line-height: 0px;
+}
+.img img{
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    mix-blend-mode:multiply;
 }
 
 .texto {
